--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 asyncio==3.4.3
-aiotdlib==0.19.2
+flake8==5.0.4
+mccabe==0.7.0
+pyaes==1.6.1
+pycodestyle==2.9.1
+pydantic==1.10.2
+pyflakes==2.5.0
+Pyrogram==2.0.61
+PySocks==1.7.1
+python-dotenv==0.21.0
+sortedcontainers==2.4.0
+typing_extensions==4.4.0
+ujson==5.5.0
