Added chats value to ini Fixed errors

--- a/example.ini
+++ b/example.ini
@@ -1,7 +1,7 @@
 [Config]
-PHONE=
-BOT_TOKEN=
-API_ID=
-API_HASH=
-PASSWORD=
-FLAG=
+PHONE =
+API_ID =
+API_HASH =
+PASSWORD =
+chats = mediasocialmarket, terncrypto_otc, MarketICOBOG
+SEARCH_COIN = BTC
